--- a/src/AccountAPI/source/template/resetPassword.html
+++ b/src/AccountAPI/source/template/resetPassword.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Password Reset</title>
+    <title>Your New Password</title>
 </head>
 <body>
-    <h1>Reset Your Password</h1>
-    <p>Click the link below to reset your password:</p>
-    <a href="{{resetLink}}">Reset Password</a>
-    <p>If you didn't request this email, please ignore it.</p>
+    <p>Dear User,</p>
+    <p>Your new password is: <strong>{{newPassword}}</strong></p>
+    <p>Please log in and change your password as soon as possible for security reasons.</p>
+    <p>Thank you!</p>
 </body>
 </html>
