fix bug auth login and update router

--- a/src/AccountAPI/source/template/resetPassword.html
+++ b/src/AccountAPI/source/template/resetPassword.html
@@ -4,7 +4,7 @@
     <title>Your New Password</title>
 </head>
 <body>
-    <p>Dear User,</p>
+    <p>Dear {{user}},</p>
     <p>Your new password is: <strong>{{newPassword}}</strong></p>
     <p>Please log in and change your password as soon as possible for security reasons.</p>
     <p>Thank you!</p>
